// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute mco2 endpoint should return success 1`] = `
{
  "data": {
    "result": 3041044,
  },
  "result": 3041044,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute stbt endpoint should return success 1`] = `
{
  "data": {
    "result": 72178807.56,
  },
  "result": 72178807.56,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
